--- a/コーポレートサイト/blog.html
+++ b/コーポレートサイト/blog.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="header-wrap">
-          <h1 class="header-logo"><a href="file:///Users/kuramotonoemi/Desktop/img%202/index.html">TECH</a></h1>
+          <h1 class="header-logo"><a href="./index.html">TECH</a></h1>
           <div id="hamburger">
             <span></span>
             <span></span>
@@ -19,13 +19,13 @@
         </div>
           <nav class="header-nav">
             <ul>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/index.html">ホーム</a></li>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/company.html">事業内容</a></li>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/news.html">ニュース</a></li>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/blog.html">社員ブログ</a></li>
-                <li><a href="https://heuristic-torvalds-e02adc.netlify.app/company.html">会社概要</a></li>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/recruit.html">採用情報</a></li>
-                <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/contact.html">お問い合わせ</a></li>
+                <li><a href="./index.html">ホーム</a></li>
+                <li><a href="./company.html">事業内容</a></li>
+                <li><a href="./news.html">ニュース</a></li>
+                <li><a href="./blog.html">社員ブログ</a></li>
+                <li><a href="./service.html">会社概要</a></li>
+                <li><a href="./recruit.html">採用情報</a></li>
+                <li><a href="./contact.html">お問い合わせ</a></li>
               </ul>
           </nav>
         </div>
@@ -90,26 +90,26 @@
         <div class="contact">
             <h1>お問い合わせ</h1>
             <p>お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
-            <button><a href="">お問い合わせ</a></button>
+            <button><a href="./contact.html">お問い合わせ</a></button>
         </div>
     </main>
     <footer>
         <p>c 2020 TECH inc.</p>
         <nav class="footer-nav">
             <ul>
-              <li><a href="file:///Users/kuramotonoemi/Desktop/img%202/index.html">ホーム</a></li>
-              <li><a>|</a></li>
-              <li><a href="#">事業内容 </a></li>
-              <li><a>|</a></li>
-              <li><a href="#">ニュース</a></li>
-              <li><a>|</a></li>
-              <li><a href="#">社員ブログ</a></li>
-              <li><a>|</a></li>
-              <li><a href="#">会社概要</a></li>
-              <li><a>|</a></li>
-              <li><a href="#">採用情報</a></li>
-              <li><a>|</a></li>
-              <li><a href="#">お問い合わせ</a></li>
+                <li><a href="./index.html">ホーム</a></li>
+                <li><a>|</a></li>
+                <li><a href="./company.html">事業内容</a></li>
+                <li><a>|</a></li>
+                <li><a href="./news.html">ニュース</a></li>
+                <li><a>|</a></li>
+                <li><a href="./blog.html">社員ブログ</a></li>
+                <li><a>|</a></li>
+                <li><a href="./service.html">会社概要</a></li>
+                <li><a>|</a></li>
+                <li><a href="./recruit.html">採用情報</a></li>
+                <li><a>|</a></li>
+                <li><a href="./contact.html">お問い合わせ</a></li>
             </ul>
           </nav>
     </footer>
